tests/fixtures/invalid/unit_import_bare_ref/src/app/units.gcl
pub const unit mile: Length = 1609.344 m;
